--- a/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="chilexplox.view.ListadoPedidosController">
+<AnchorPane prefHeight="640.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ListadoPedidosController">
    <children>
       <SplitPane dividerPositions="0.43859649122807015" layoutX="6.0" layoutY="7.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -24,13 +23,13 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button layoutX="35.0" layoutY="558.0" mnemonicParsing="false" text="Nuevo" />
-                  <Button layoutX="244.0" layoutY="558.0" mnemonicParsing="false" text="Eliminar" />
+                  <Button layoutX="120.0" layoutY="566.0" mnemonicParsing="false" text="Nuevo" />
+                  <Button layoutX="359.0" layoutY="566.0" mnemonicParsing="false" text="Eliminar" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="611.0" prefWidth="729.0">
                <children>
-                  <GridPane layoutX="14.0" layoutY="41.0" prefHeight="147.0" prefWidth="404.0">
+                  <GridPane layoutX="14.0" layoutY="41.0" prefHeight="171.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -55,7 +54,7 @@
                         <Label text="Fecha" GridPane.rowIndex="4" />
                         <Label text="Urgencia" GridPane.rowIndex="5" />
                         <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <TextField prefHeight="57.0" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                   <Label layoutX="15.0" layoutY="213.0" text="Detalles Cliente">
@@ -63,7 +62,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <GridPane layoutX="14.0" layoutY="240.0" prefHeight="118.0" prefWidth="404.0">
+                  <GridPane layoutX="20.0" layoutY="257.0" prefHeight="118.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -90,13 +89,43 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="365.0" text="Agregar encomiendas">
+                  <Label layoutX="17.0" layoutY="381.0" text="Agregar encomiendas">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                   <Button layoutX="69.0" layoutY="558.0" mnemonicParsing="false" text="Despachar" />
                   <Button layoutX="266.0" layoutY="558.0" mnemonicParsing="false" text="Guardar Cambios" />
+                  <GridPane layoutX="23.0" layoutY="401.0" prefHeight="87.0" prefWidth="404.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Peso" />
+                        <Label text="Volumen" GridPane.rowIndex="1" />
+                        <TextField GridPane.columnIndex="1" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+                  <Button layoutX="297.0" layoutY="473.0" mnemonicParsing="false" text="Agregar" />
+                  <TableView layoutX="451.0" layoutY="41.0" prefHeight="403.0" prefWidth="278.0">
+                    <columns>
+                      <TableColumn prefWidth="95.0" text="ID" />
+                      <TableColumn prefWidth="93.0" text="Peso" />
+                        <TableColumn prefWidth="88.0" text="Volumen" />
+                    </columns>
+                  </TableView>
+                  <Label layoutX="451.0" layoutY="14.0" text="Encomiendas en pedido">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
         </items>
