--- a/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
@@ -12,7 +12,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView layoutX="-7.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tabla_pedidos" layoutX="-7.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                       <TableColumn prefWidth="75.0" text="ID" />
                       <TableColumn prefWidth="75.0" text="Estado" />
@@ -23,8 +23,8 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button layoutX="120.0" layoutY="566.0" mnemonicParsing="false" text="Nuevo" />
-                  <Button layoutX="359.0" layoutY="566.0" mnemonicParsing="false" text="Eliminar" />
+                  <Button layoutX="118.0" layoutY="598.0" mnemonicParsing="false" text="Nuevo" />
+                  <Button layoutX="359.0" layoutY="598.0" mnemonicParsing="false" text="Eliminar" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="611.0" prefWidth="729.0">
@@ -57,7 +57,7 @@
                         <TextField prefHeight="57.0" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
-                  <Label layoutX="15.0" layoutY="213.0" text="Detalles Cliente">
+                  <Label layoutX="16.0" layoutY="234.0" text="Detalles Cliente">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -89,20 +89,19 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="17.0" layoutY="381.0" text="Agregar encomiendas">
+                  <Label layoutX="16.0" layoutY="390.0" text="Agregar encomiendas">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="69.0" layoutY="558.0" mnemonicParsing="false" text="Despachar" />
-                  <Button layoutX="266.0" layoutY="558.0" mnemonicParsing="false" text="Guardar Cambios" />
-                  <GridPane layoutX="23.0" layoutY="401.0" prefHeight="87.0" prefWidth="404.0">
+                  <Button layoutX="508.0" layoutY="476.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Despachar" />
+                  <Button layoutX="508.0" layoutY="547.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" />
+                  <GridPane layoutX="20.0" layoutY="415.0" prefHeight="59.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
@@ -113,7 +112,7 @@
                         <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
-                  <Button layoutX="297.0" layoutY="473.0" mnemonicParsing="false" text="Agregar" />
+                  <Button layoutX="295.0" layoutY="488.0" mnemonicParsing="false" text="Agregar" />
                   <TableView layoutX="451.0" layoutY="41.0" prefHeight="403.0" prefWidth="278.0">
                     <columns>
                       <TableColumn prefWidth="95.0" text="ID" />
