--- a/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
@@ -93,30 +93,9 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="16.0" layoutY="390.0" text="Agregar encomiendas">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
                   <Button layoutX="526.0" layoutY="463.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Despachar" />
                   <Button layoutX="526.0" layoutY="533.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" />
-                  <GridPane layoutX="20.0" layoutY="415.0" prefHeight="59.0" prefWidth="404.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="Peso" />
-                        <Label text="Volumen" GridPane.rowIndex="1" />
-                        <TextField disable="true" GridPane.columnIndex="1" />
-                        <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                     </children>
-                  </GridPane>
-                  <Button layoutX="295.0" layoutY="488.0" mnemonicParsing="false" text="Agregar" />
+                  <Button layoutX="222.0" layoutY="518.0" mnemonicParsing="false" text="Editar Pedido" />
                   <TableView layoutX="451.0" layoutY="41.0" prefHeight="403.0" prefWidth="278.0">
                     <columns>
                       <TableColumn prefWidth="95.0" text="ID" />
