--- a/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoCamiones.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoCamiones.fxml
@@ -22,7 +22,7 @@
             <TreeTableColumn fx:id="patente2Column" prefWidth="88.0" text="Patente" />
             <TreeTableColumn fx:id="estado2Column" prefWidth="123.0" text="Estado" />
             <TreeTableColumn fx:id="capacidad2Column" prefWidth="117.0" text="Capacidad" />
-            <TreeTableColumn fx:id="origen2Column" prefWidth="140.0" text="Destino" />
+            <TreeTableColumn fx:id="destinoColumn" prefWidth="140.0" text="Destino" />
          </columns>
       </TreeTableView>
       <Button layoutX="640.0" layoutY="503.0" mnemonicParsing="false" text="Volver al Menu" />
@@ -45,21 +45,21 @@
         </rowConstraints>
          <children>
             <Label text="Patente" />
-            <TextField GridPane.columnIndex="1" />
+            <TextField fx:id="patente" GridPane.columnIndex="1" />
             <Label text="Estado" GridPane.rowIndex="1" />
             <Label text="Capacidad" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="estado" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="capacidad" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="sucursalOrigen" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="sucursalDestino" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="Modelo" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label text="Sucursal Origen" GridPane.rowIndex="3" />
             <Label text="Sucursal Destino" GridPane.rowIndex="4" />
             <Label text="Modelo" GridPane.rowIndex="5" />
             <Label text="Marca" GridPane.rowIndex="6" />
             <Label text="Kms" GridPane.rowIndex="7" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="Marca" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="Kms" GridPane.columnIndex="1" GridPane.rowIndex="7" />
          </children>
       </GridPane>
    </children>
