--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
    <children>
-      <Label layoutX="80.0" layoutY="98.0" text="Seleccione una opción" />
-      <Button fx:id="btnPedidos" disable="true" layoutX="116.0" layoutY="138.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
-      <Label layoutX="14.0" layoutY="14.0" text="Bienvenido:" />
-      <Label layoutX="30.0" layoutY="38.0" text="Sucursal:" />
-      <Label fx:id="nombre" layoutX="100.0" layoutY="14.0" text="Nombre" />
-      <Label fx:id="sucursal" layoutX="100.0" layoutY="38.0" text="Sucursal" />
-      <Button layoutX="127.0" layoutY="337.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
-      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="97.0" layoutY="235.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
-      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="84.0" layoutY="287.0" mnemonicParsing="false" text="Bandeja de Entrada" />
+      <Label layoutX="51.0" layoutY="167.0" text="Seleccione una opción del menú">
+         <font>
+            <Font size="13.0" />
+         </font></Label>
+      <Button fx:id="btnPedidos" disable="true" layoutX="114.0" layoutY="220.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
+      <Label layoutX="14.0" layoutY="81.0" text="Bienvenido:" />
+      <Label layoutX="30.0" layoutY="105.0" text="Sucursal:" />
+      <Label fx:id="nombre" layoutX="100.0" layoutY="81.0" text="Nombre" />
+      <Label fx:id="sucursal" layoutX="100.0" layoutY="105.0" text="Sucursal" />
+      <Button layoutX="126.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
+      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="96.0" layoutY="348.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
+      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="86.0" layoutY="388.0" mnemonicParsing="false" text="Bandeja de Entrada" />
+      <Button disable="true" layoutX="58.0" layoutY="262.0" mnemonicParsing="false" text="Avisar Arribo o Salida Camiones" />
+      <Button disable="true" layoutX="62.0" layoutY="306.0" mnemonicParsing="false" text="Cargar o Descargar Camiones" />
+      <Label alignment="CENTER" layoutX="69.0" layoutY="14.0" prefHeight="49.0" prefWidth="153.0" text="Chilexplox">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Separator layoutY="63.0" prefHeight="3.0" prefWidth="301.0" />
+      <Separator layoutX="3.0" layoutY="142.0" prefHeight="3.0" prefWidth="301.0" />
    </children>
 </AnchorPane>
