--- a/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
@@ -98,7 +98,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="526.0" layoutY="529.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" AnchorPane.bottomAnchor="38.0" />
+                  <Button layoutX="526.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleGuardarCambios" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" AnchorPane.bottomAnchor="38.0" />
                   <GridPane layoutX="14.0" layoutY="436.0" prefHeight="81.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
