--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
    <children>
-      <Label layoutX="51.0" layoutY="167.0" text="Seleccione una opción del menú">
+      <Label layoutX="53.0" layoutY="184.0" text="Seleccione una opción del menú">
          <font>
             <Font size="13.0" />
          </font></Label>
@@ -20,14 +20,16 @@
       <Button layoutX="126.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
       <Button fx:id="btnEnviarMensaje" disable="true" layoutX="96.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
       <Button fx:id="btnBandejaEntrada" disable="true" layoutX="86.0" layoutY="388.0" mnemonicParsing="false" text="Bandeja de Entrada" />
-      <Button disable="true" layoutX="51.0" layoutY="265.0" mnemonicParsing="false" text="Avisar Arribo o Salida Camiones" />
-      <Button disable="true" layoutX="57.0" layoutY="306.0" mnemonicParsing="false" text="Cargar o Descargar Camiones" />
+      <Button fx:id="btnArrivoSalida" disable="true" layoutX="51.0" layoutY="265.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arrivo o Salida Camiones" />
+      <Button fx:id="btnCargaDescarga" disable="true" layoutX="57.0" layoutY="306.0" mnemonicParsing="false" onAction="#handleCargaDescarga" text="Cargar o Descargar Camiones" />
       <Label alignment="CENTER" layoutX="69.0" layoutY="14.0" prefHeight="49.0" prefWidth="153.0" text="Chilexplox">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
       <Separator layoutY="63.0" prefHeight="3.0" prefWidth="301.0" />
-      <Separator layoutX="3.0" layoutY="142.0" prefHeight="3.0" prefWidth="301.0" />
+      <Separator layoutY="158.0" prefHeight="3.0" prefWidth="301.0" />
+      <Label layoutX="57.0" layoutY="131.0" text="Rol:" />
+      <Label fx:id="rol" layoutX="100.0" layoutY="131.0" text="Rol" />
    </children>
 </AnchorPane>
