--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
@@ -20,7 +20,7 @@
       <Button layoutX="126.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
       <Button fx:id="btnEnviarMensaje" disable="true" layoutX="96.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
       <Button fx:id="btnBandejaEntrada" disable="true" layoutX="86.0" layoutY="388.0" mnemonicParsing="false" text="Bandeja de Entrada" />
-      <Button fx:id="btnArrivoSalida" disable="true" layoutX="51.0" layoutY="265.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arrivo o Salida Camiones" />
+      <Button fx:id="btnArrivoSalida" disable="true" layoutX="51.0" layoutY="265.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arribo o Salida Camiones" />
       <Button fx:id="btnCargaDescarga" disable="true" layoutX="57.0" layoutY="306.0" mnemonicParsing="false" onAction="#handleCargaDescarga" text="Cargar o Descargar Camiones" />
       <Label alignment="CENTER" layoutX="69.0" layoutY="14.0" prefHeight="49.0" prefWidth="153.0" text="Chilexplox">
          <font>
