--- a/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
@@ -8,20 +8,20 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
    <children>
-      <Label layoutX="53.0" layoutY="184.0" text="Seleccione una opción del menú">
+      <Label layoutX="53.0" layoutY="172.0" text="Seleccione una opción del menú">
          <font>
             <Font size="13.0" />
          </font></Label>
-      <Button fx:id="btnPedidos" disable="true" layoutX="114.0" layoutY="220.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
+      <Button fx:id="btnPedidos" disable="true" layoutX="110.0" layoutY="199.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
       <Label layoutX="14.0" layoutY="81.0" text="Bienvenido:" />
       <Label layoutX="30.0" layoutY="105.0" text="Sucursal:" />
       <Label fx:id="nombre" layoutX="100.0" layoutY="81.0" text="Nombre" />
       <Label fx:id="sucursal" layoutX="100.0" layoutY="105.0" text="Sucursal" />
-      <Button layoutX="126.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
-      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="96.0" layoutY="347.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
-      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="86.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" text="Bandeja de Entrada" />
-      <Button fx:id="btnArrivoSalida" disable="true" layoutX="51.0" layoutY="265.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arribo o Salida Camiones" />
-      <Button fx:id="btnCargaDescarga" disable="true" layoutX="57.0" layoutY="306.0" mnemonicParsing="false" onAction="#handleCargaDescarga" text="Cargar o Descargar Camiones" />
+      <Button layoutX="121.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
+      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="87.0" layoutY="355.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
+      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="71.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" text="Bandeja de Entrada" />
+      <Button fx:id="btnArrivoSalida" disable="true" layoutX="31.0" layoutY="235.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arribo o Salida Camiones" />
+      <Button fx:id="btnCarga" disable="true" layoutX="79.0" layoutY="274.0" mnemonicParsing="false" onAction="#handleCarga" text="Cargar Camiones" />
       <Label alignment="CENTER" layoutX="69.0" layoutY="14.0" prefHeight="49.0" prefWidth="153.0" text="Chilexplox">
          <font>
             <Font size="24.0" />
@@ -31,5 +31,6 @@
       <Separator layoutY="158.0" prefHeight="3.0" prefWidth="301.0" />
       <Label layoutX="57.0" layoutY="131.0" text="Rol:" />
       <Label fx:id="rol" layoutX="100.0" layoutY="131.0" text="Rol" />
+      <Button fx:id="btnDescarga" disable="true" layoutX="68.0" layoutY="314.0" mnemonicParsing="false" onAction="#handleDescarga" text="Descargar Camiones" />
    </children>
 </AnchorPane>
