--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Descarga.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Descarga.fxml
@@ -8,10 +8,6 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.DescargaController">
    <children>
-      <TextField layoutX="307.0" layoutY="295.0" />
-      <TextField layoutX="307.0" layoutY="248.0" />
-      <Label layoutX="36.0" layoutY="300.0" text="Volumen disponible del camion: " />
-      <Label layoutX="39.0" layoutY="253.0" text="Peso disponible del camion:" />
       <Label layoutX="610.0" layoutY="40.0" text="Listado de pedidos cargados en camion:">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -19,16 +15,18 @@
       </Label>
       <TableView layoutX="610.0" layoutY="78.0" prefHeight="488.0" prefWidth="510.0">
          <columns>
-            <TableColumn prefWidth="75.0" text="ID" />
-            <TableColumn prefWidth="175.0" text="Sucursal origen" />
-            <TableColumn prefWidth="108.0" text="Prioridad" />
-            <TableColumn prefWidth="75.0" text="Peso" />
-            <TableColumn prefWidth="75.0" text="Volumen" />
+            <TableColumn prefWidth="114.0" text="ID" />
+            <TableColumn prefWidth="136.0" text="Origen" />
+            <TableColumn prefWidth="119.0" text="Prioridad" />
+            <TableColumn prefWidth="138.0" text="Volumen" />
          </columns>
       </TableView>
       <Button layoutX="258.0" layoutY="33.0" mnemonicParsing="false" onAction="#handleVolverMenu" text="Volver al menu" />
       <ChoiceBox fx:id="patente_descarga" layoutX="307.0" layoutY="200.0" prefHeight="31.0" prefWidth="187.0" />
-      <Label layoutX="39.0" layoutY="205.0" text="Pantente camion:" />
+      <Label layoutX="39.0" layoutY="205.0" text="Pantente camion:">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
       <Button layoutX="420.0" layoutY="105.0" mnemonicParsing="false" onAction="#handleDescargarMedio" prefHeight="37.0" prefWidth="92.0" text="Descargar" />
       <TextField fx:id="id_pedido" layoutX="183.0" layoutY="108.0" />
       <Label fx:id="sucursal" layoutX="113.0" layoutY="36.0" text="sucursal" />
@@ -43,5 +41,11 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
+      <Label layoutX="38.0" layoutY="259.0" text="Volumen disponible del camion:">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="307.0" layoutY="259.0" text="volumen" />
    </children>
 </AnchorPane>
