--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
    <children>
       <Label layoutX="53.0" layoutY="172.0" text="Seleccione una opción del menú">
          <font>
@@ -17,11 +17,11 @@
       <Label layoutX="30.0" layoutY="105.0" text="Sucursal:" />
       <Label fx:id="nombre" layoutX="100.0" layoutY="81.0" text="Nombre" />
       <Label fx:id="sucursal" layoutX="100.0" layoutY="105.0" text="Sucursal" />
-      <Button layoutX="121.0" layoutY="447.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
-      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="87.0" layoutY="355.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
-      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="71.0" layoutY="401.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" text="Bandeja de Entrada" />
-      <Button fx:id="btnArrivoSalida" disable="true" layoutX="31.0" layoutY="235.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arribo o Salida Camiones" />
-      <Button fx:id="btnCarga" disable="true" layoutX="79.0" layoutY="274.0" mnemonicParsing="false" onAction="#handleCarga" text="Cargar Camiones" />
+      <Button layoutX="124.0" layoutY="481.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
+      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="90.0" layoutY="389.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
+      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="74.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" text="Bandeja de Entrada" />
+      <Button fx:id="btnArrivoSalida" disable="true" layoutX="34.0" layoutY="269.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arribo o Salida Camiones" />
+      <Button fx:id="btnCarga" disable="true" layoutX="82.0" layoutY="308.0" mnemonicParsing="false" onAction="#handleCarga" text="Cargar Camiones" />
       <Label alignment="CENTER" layoutX="69.0" layoutY="14.0" prefHeight="49.0" prefWidth="153.0" text="Chilexplox">
          <font>
             <Font size="24.0" />
@@ -31,6 +31,7 @@
       <Separator layoutY="158.0" prefHeight="3.0" prefWidth="301.0" />
       <Label layoutX="57.0" layoutY="131.0" text="Rol:" />
       <Label fx:id="rol" layoutX="100.0" layoutY="131.0" text="Rol" />
-      <Button fx:id="btnDescarga" disable="true" layoutX="68.0" layoutY="314.0" mnemonicParsing="false" onAction="#handleDescarga" text="Descargar Camiones" />
+      <Button fx:id="btnDescarga" disable="true" layoutX="71.0" layoutY="348.0" mnemonicParsing="false" onAction="#handleDescarga" text="Descargar Camiones" />
+      <Button fx:id="btnDetallePedido" layoutX="76.0" layoutY="234.0" mnemonicParsing="false" onAction="#handleDetallePedidos" text="Ver Detalles Pedido" />
    </children>
 </AnchorPane>
