--- a/Entrega 4/Chilexplox/src/chilexplox/view/Login.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Login.fxml
@@ -15,7 +15,7 @@
       <Button layoutX="213.0" layoutY="535.0" mnemonicParsing="false" onAction="#handleIngresarEmplaedos" text="Ingresar" />
       <ImageView fitHeight="150.0" fitWidth="500.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../archivos/chilexplox.jpg" />
+            <Image url="@../../../archivos/chilexplox.png" />
          </image>
       </ImageView>
       <Text layoutX="162.0" layoutY="172.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¿Es Usted Cliente?">
