--- a/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
@@ -1,37 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
    <children>
-      <Label layoutX="53.0" layoutY="172.0" text="Seleccione una opción del menú">
+      <ImageView fitHeight="150.0" fitWidth="500.0" layoutX="4.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../archivos/chilexplox.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="522.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido">
          <font>
-            <Font size="13.0" />
-         </font></Label>
-      <Button fx:id="btnPedidos" disable="true" layoutX="110.0" layoutY="199.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
-      <Label layoutX="14.0" layoutY="81.0" text="Bienvenido:" />
-      <Label layoutX="30.0" layoutY="105.0" text="Sucursal:" />
-      <Label fx:id="nombre" layoutX="100.0" layoutY="81.0" text="Nombre" />
-      <Label fx:id="sucursal" layoutX="100.0" layoutY="105.0" text="Sucursal" />
-      <Button layoutX="124.0" layoutY="481.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
-      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="90.0" layoutY="389.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
-      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="74.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" text="Bandeja de Entrada" />
-      <Button fx:id="btnArrivoSalida" disable="true" layoutX="34.0" layoutY="269.0" mnemonicParsing="false" onAction="#handleArrivoSalida" text="Avisar Arribo o Salida Camiones" />
-      <Button fx:id="btnCarga" disable="true" layoutX="82.0" layoutY="308.0" mnemonicParsing="false" onAction="#handleCarga" text="Cargar Camiones" />
-      <Label alignment="CENTER" layoutX="69.0" layoutY="14.0" prefHeight="49.0" prefWidth="153.0" text="Chilexplox">
-         <font>
-            <Font size="24.0" />
+            <Font size="14.0" />
          </font>
-      </Label>
-      <Separator layoutY="63.0" prefHeight="3.0" prefWidth="301.0" />
-      <Separator layoutY="158.0" prefHeight="3.0" prefWidth="301.0" />
-      <Label layoutX="57.0" layoutY="131.0" text="Rol:" />
-      <Label fx:id="rol" layoutX="100.0" layoutY="131.0" text="Rol" />
-      <Button fx:id="btnDescarga" disable="true" layoutX="71.0" layoutY="348.0" mnemonicParsing="false" onAction="#handleDescarga" text="Descargar Camiones" />
-      <Button fx:id="btnDetallePedido" layoutX="76.0" layoutY="234.0" mnemonicParsing="false" onAction="#handleDetallePedidos" text="Ver Detalles Pedido" />
+      </Text>
+      <Label fx:id="nombre" layoutX="602.0" layoutY="25.0" text="Nombre">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Text layoutX="522.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rol">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <Label fx:id="rol" layoutX="602.0" layoutY="58.0" text="Rol">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Text layoutX="522.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sucursal">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="sucursales" layoutX="602.0" layoutY="88.0" prefWidth="150.0" />
+      <Separator layoutX="2.0" layoutY="133.0" prefHeight="3.0" prefWidth="792.0" />
+      <Button fx:id="btnPedidos" disable="true" layoutX="55.0" layoutY="155.0" mnemonicParsing="false" onAction="#handlePedidos" prefHeight="95.0" prefWidth="142.0" text="Ingresar o Editar Pedidos" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnDetallePedido" layoutX="239.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleDetallePedidos" prefHeight="95.0" prefWidth="142.0" text="Ver Detalles Pedido" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="239.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleMensaje" prefHeight="103.0" prefWidth="142.0" text="Enviar Mensaje" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="423.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleBandejaDeEntrada" prefHeight="103.0" prefWidth="150.0" text="Bandeja de Entrada" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnArrivoSalida" disable="true" layoutX="51.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleArrivoSalida" prefHeight="103.0" prefWidth="150.0" text="Avisar Arribo o Salida Camiones" textAlignment="CENTER" wrapText="true" />
+      <Button fx:id="btnCarga" disable="true" layoutX="423.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleCarga" prefHeight="95.0" prefWidth="150.0" text="Cargar Camiones" />
+      <Button fx:id="btnDescarga" disable="true" layoutX="602.0" layoutY="155.0" mnemonicParsing="false" onAction="#handleDescarga" prefHeight="95.0" prefWidth="150.0" text="Descargar Camiones" wrapText="true" />
+      <Button layoutX="628.0" layoutY="483.0" mnemonicParsing="false" onAction="#handleSalir" prefHeight="89.0" prefWidth="132.0" text="Salir" />
    </children>
 </AnchorPane>
